# InferOpsLab

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
examples/: CMakeLists.txt
examples/gemm/: sgemm_example.cu
include/inferopslab/: inferopslab.h
include/inferopslab/gemm/: gemm.h
python/inferopslab/: __init__.py
src/: cpp_extensions.cpp
src/common/: cuda_utils.cuh
src/gemm/: gemm_kernel.cu  gemm_launch.cuh
tests/gemm/: test_sgemm.py
